# miditosolenoid

./: .gitignore  CMakeLists.txt  Makefile  NOTES.md  README.md  notes_off.sh  notes_on.sh
src/: main.cpp  tusb_config.h  usb_descriptors.c
src/generative/: generative_controller.cpp  generative_controller.h
src/generative/avrlib/: base.h  op.h  random.cc  random.h  resources_manager.h
src/generative/grids/: pattern_generator.cc  pattern_generator.h  resources.cc  resources.h
